--- a/pages_suppresion/list.html
+++ b/pages_suppresion/list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Liste des Utilisateurs</title>
+    <link rel="stylesheet" href="list.css">
 </head>
 <body>
     <h1>Liste des Utilisateurs</h1>
