ajout d'un responsable au traitement des données pour la politique de confidentialité

--- a/politique de confidientialité.html
+++ b/politique de confidientialité.html
@@ -31,6 +31,10 @@
         <p>La confidentialité des visiteurs de notre site est très importante à nos yeux, et nous nous engageons à la protéger. Afin que vous compreniez quelles informations nous recueillons et comment nous les utilisons et les partageons, nous vous encourageons à lire notre Politique de confidentialité. 
             Dans cette Politique de confidentialité, nous expliquons comment nous recueillons, utilisons, partageons, stockons et transférons les informations. Nous vous faisons également savoir quels sont vos droits.</p>
     </section>
+    <section id="Identité-du-responsable-de-traitement">
+        <h2>Identité du responsable de traitement</h2>
+        <p>Benoît CHAVAGNAC, délégué à la protection des données à Bordeaux INP, contactable par mail à benoit.chavagnac@bordeaux-inp.fr agit en qualité de responsable de traitement à l'égard des données personnelles collectées sur le Site. Pour toute question relative au traitement des données, vous pouvez également nous contacter via l'adresse mail suivante : projetsix51@gmail.com</p>
+    </section>
     <section id="Les-informations-que-nous-recueillons">
         <h2>Les informations que nous recueillons</h2>
         <p>Voici les types d'informations personnelles qui peuvent être collectées, stockées et utilisées :</p>
