ajout d'un responsable de traitement pour politique de confidentialité

--- a/politique de confidientialité.html
+++ b/politique de confidientialité.html
@@ -33,7 +33,7 @@
     </section>
     <section id="Identité-du-responsable-de-traitement">
         <h2>Identité du responsable de traitement</h2>
-        <p>Benoît CHAVAGNAC, délégué à la protection des données à Bordeaux INP, contactable par mail à benoit.chavagnac@bordeaux-inp.fr agit en qualité de responsable de traitement à l'égard des données personnelles collectées sur le site. Pour toute question relative au traitement des données, vous pouvez également nous contacter via l'adresse mail suivante : projetsix51@gmail.com</p>
+        <p>Benoît CHAVAGNAC, délégué à la protection des données à Bordeaux INP, contactable par mail à benoit.chavagnac@bordeaux-inp.fr agit en qualité de responsable de traitement à l'égard des données personnelles collectées sur le site. Pour toute question relative au traitement des données, vous pouvez égale                                                                                                                             ent nous contacter via l'adresse mail suivante : projetsix51@gmail.com</p>
     </section>
     <section id="Les-informations-que-nous-recueillons">
         <h2>Les informations que nous recueillons</h2>
