ajout de json_co

--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Liste des Utilisateurs</h1>
-    <table>
+    <table>s
         <tr>
             <th>ID</th>
             <th>Nom</th>
